Update 'backend-tests-go-ktssdlhh' component image to: quay.io/rhtap_qe/backend-tests-go-ktssdlhh:068c8c406ebe6b6422087e7d5add2f8c273e2664@sha256:84f6a263e27e4a2dde8879d00e766f6d289443dc0f39bc3712834516a1ad4796

--- a/components/backend-tests-go-ktssdlhh/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ktssdlhh/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ktssdlhh
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ktssdlhh:068c8c406ebe6b6422087e7d5add2f8c273e2664@sha256:84f6a263e27e4a2dde8879d00e766f6d289443dc0f39bc3712834516a1ad4796
+          name: container-image
